tests/sema/err_arg_type.diag
err_arg_type.ax:5:9: error: type mismatch: expected 3, found 12
